5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1575_1332.log
== TEST (2019-03-12 11:56:47) 
-- CODE:
a = 5
A = 3/2*(3**0.5)*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:56:52) 
-- CODE:
a = 5
A = 3/2*(3**0.5)*a**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.20806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1332/main.py", line 4, in <module>
    print(round(area, 4))
NameError: name 'area' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:31) 
-- CODE:
a = 5
A = 3/2*(3**0.5)*a**2
 
print(round(A, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:57:37) 
-- CODE:
a = 5
A = 3/2*(3**0.5)*a**2
 
print(round(A, 4))
-- EXECUTION TIME:
0.224391
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
